tela cadastro ADM e ESQUEC
ESQUECI SENHA ESTA COM 70% PRONTO E A TELA ADM DE CADASTRO ESTA PRONTA, POREM A IMAGEM ESTA ZUADA

--- a/src/main/webapp/WEB-INF/templateADM/templateADM.xhtml
+++ b/src/main/webapp/WEB-INF/templateADM/templateADM.xhtml
@@ -35,7 +35,7 @@
 	</ui:insert>
   <a href="homeADM.xhtml"><i class="fa fa-fw fa-bar-chart"></i> Estatisticas</a>
   <a href="empresasADM.xhtml"><i class="fa fa-fw fa-wrench"></i> Empresas</a>
-  <a href="popupCriarUsuarioAdm.xhtml"><i class="fa fa-fw fa-user-plus"></i> Criar ADM</a>
+  <a href="criarUsuarioAdm.xhtml"><i class="fa fa-fw fa-user-plus"></i> Criar ADM</a>
   <a href="perfilADM.xhtml"><i class="fa fa-fw fa-user"></i> Perfil</a>
   <a href="#clients"><i class="fa fa-fw fa-sign-out"></i> Sair</a>
 
