--- a/src/main/webapp/esqueciSenha.xhtml
+++ b/src/main/webapp/esqueciSenha.xhtml
@@ -24,7 +24,7 @@
 					<h:panelGrid columns="1">
 						
 						<h:outputText id="recuperaemail" value=" Insira seu E-mail: " />
-						<p:inputText label="Email"  id="usuarioa" value="#{a}" style="width:240px"
+						<p:inputText label="Email"  id="usuarioa" value="#{recuperarSenhaMBean.mens.destinatario}" style="width:240px"
 							required="true" maxlength="14" />
 
 					</h:panelGrid>
