--- a/src/main/webapp/criarUsuarioAdm.xhtml
+++ b/src/main/webapp/criarUsuarioAdm.xhtml
@@ -17,7 +17,9 @@
 
 <center>
 	<p:panel value="Login" style="width: 600px">
-		<h:graphicImage library="img" name="/SENaI.jpg" />
+		
+		<h:graphicImage library="img" name="/logo-senai.png" style="width:300px; margin: 7px;"/>
+
 		<p />
 		<p:panel>
 			<h:form>
@@ -25,27 +27,23 @@
 				<center>
 					<h:panelGrid>
 
-						<p:outputLabel for="nif" value="NIF: " />
-						<p:inputMask id="nif" value="#{cadastroAdmMBean.adm.NIF}" required="true"
-							style="width: 350px;" />
+						<h:outputText value="NIF: " style="font-weight:bold;" />
+						<p:inputText value="#{cadastroAdmMBean.adm.NIF}"  required="true" style="width: 350px;" />
 
-						<h:outputText value="Email: " />
+						<h:outputText value="Email: " style="font-weight:bold;" />
 						<p:inputText value="#{cadastroAdmMBean.adm.email}" required="true" style="width: 350px;" />
 
-						<h:outputText value="Nome: " />
+						<h:outputText value="Nome: " style="font-weight:bold;" />
 						<p:inputText value="#{cadastroAdmMBean.adm.nome}" required="true" style="width: 350px;" />
 
-						<h:outputText value="Senha: " />
-						<p:password id="senha3" value="#{cadastroAdmMBean.adm.senha}" required="true"
-							style="width: 350px;" />
+						<h:outputText value="Senha: " style="font-weight:bold;" />
+						<p:password id="senha3" value="#{cadastroAdmMBean.adm.senha}" required="true" style="width: 350px;" />
 
-						<h:outputText value="Confirmar Senha: " />
-						<p:password id="confsenha3" required="true"
-							style="width: 350px;" />
+						<h:outputText value="Confirmar Senha: " style="font-weight:bold;" />
+						<p:password id="confsenha3" required="true" style="width: 350px;" />
 
-						<p:outputLabel for="tel" value="Telefone:" />
-						<p:inputMask id="tel" value="#{cadastroAdmMBean.adm.telefone}" mask="(999) 99999-9999"
-							required="true" style="width: 350px;" />
+						<h:outputLabel for="tel" value="Telefone:" />
+						<p:inputMask id="tel" value="#{cadastroAdmMBean.adm.telefone}" mask="(99) 99999-9999" required="true" style="width: 350px;" />
 						<br />
 
 					</h:panelGrid>
@@ -53,8 +51,7 @@
 				</center>
 		
 				<center>
-					<h:commandButton value="Cadastrar" ajax="false" action="#{cadastroAdmMBean.salvar}"
-						style="height: 30px; font-size: 14px; width:150px; border: 0px; " />
+					<h:commandButton value="Cadastrar" ajax="false" action="#{cadastroAdmMBean.salvar}" style="height: 30px; font-size: 14px; width:150px; border: 0px; " />
 				</center>
 				
 			</h:form>
