--- a/src/main/webapp/empresasADM.xhtml
+++ b/src/main/webapp/empresasADM.xhtml
@@ -51,11 +51,11 @@
 			<p:dialog header="Empresa" widgetVar="empDialog" modal="true"
 				showEffect="fade" hideEffect="fade" resizable="false">
 				<p:outputPanel id="empDetail" style="text-align:center;">
-					<p:panelGrid columns="2" var="ues" rendered="#{not empty tableMBean.ues}"
+					<p:panelGrid columns="2"  rendered="#{a}"
 						columnClasses="label,value">
 
 						<h:outputText value="Nome:" />
-						<h:outputText value="#{ues.nome}" />
+						<h:outputText value="#{a}" />
 
 						<h:outputText value="CNPJ:" />
 						<h:outputText value="#{a}" />
