--- a/src/main/webapp/telaCodigo.xhtml
+++ b/src/main/webapp/telaCodigo.xhtml
@@ -20,51 +20,54 @@
 
 			<p:panel>
 				<center>
-					<h:form>
+					<h:form rendered="#{!recuperarSenhaMBean.codigoCerto}">
 						<p:messages id="msgs" />
 						<h:panelGrid columns="1">
 
-							<h:outputText
-								value=" Insira o Codigo no EMAIL: " />
-							<p:inputText label="Email" id="codigo" value="#{recuperarSenhaMBean.vCod}"
-								style="width:240px" required="true" maxlength="14" />
+							<h:outputText value=" Insira o Codigo no EMAIL: " />
+							<p:inputText label="Email" id="codigo"
+								value="#{recuperarSenhaMBean.vCod}" style="width:240px"
+								required="true" maxlength="14" />
 
 						</h:panelGrid>
 						<p />
 						<div align="center">
 
-							<p:commandButton value="Enviar" action="#{recuperarSenhaMBean.verificaCodigo}"
+							<p:commandButton ajax="false" value="Enviar"
+								action="#{recuperarSenhaMBean.verificaCodigo}"
 								update="formSenha"
 								style="height: 30px; font-size: 14px; width:220px" />
 
 						</div>
 						<p />
 
-					</h:form>
-					<h:form>
 						<h:commandButton value="Voltar" ajax="false" action="login"
 							style="height: 30px; font-size: 14px; width:150px; border: 0px; " />
+
 					</h:form>
-					<h:form id="formSenha" rendered="#{recuperarSenhaMBean.codigoCerto}">
+				
+					<h:form id="formSenha"
+						rendered="#{recuperarSenhaMBean.codigoCerto}">
 						<p:messages id="msgs" />
 						<h:panelGrid columns="1">
 
-							<h:outputText
-								value="Nova Senha:" />
-							<p:inputText label="Email" id="novaSenha" value="#{recuperarSenhaMBean.password}"
+							<h:outputText value="Nova Senha:" />
+							<p:inputText label="Email" id="novaSenha"
+								value="#{recuperarSenhaMBean.password}" style="width:240px"
+								required="true" maxlength="14" />
+							<br />
+							<h:outputText value="Confirmar Senha: " />
+							<p:inputText label="Email"
+								value="#{recuperarSenhaMBean.verificaPassword}"
 								style="width:240px" required="true" maxlength="14" />
-							<br/>
-							<h:outputText
-								value="Confirmar Senha: " />
-							<p:inputText label="Email" value="#{recuperarSenhaMBean.verificaPassword}"
-								style="width:240px" required="true" maxlength="14" />
-							
+
 
 						</h:panelGrid>
 						<p />
-						<p/>
+						<p />
 						<div align="center">
-							<h:commandButton value="Alterar" action="#{recuperarSenhaMBean.novaSenha}"
+							<h:commandButton value="Alterar"
+								action="#{recuperarSenhaMBean.novaSenha}"
 								style="height: 30px; font-size: 14px; width:220px" />
 						</div>
 						<p />
