--- a/src/main/webapp/WEB-INF/templateADM/templateADM.xhtml
+++ b/src/main/webapp/WEB-INF/templateADM/templateADM.xhtml
@@ -1,6 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
@@ -30,14 +28,19 @@
 	</div>
 
 <div class="sidebar">
+
 	<ui:insert name="context">
 	<h:graphicImage  id="imgb" library="img" name="SENAaI.jpg" style="margin-bottom: 40px" />
 	</ui:insert>
-  <a href="homeADM.xhtml"><i class="fa fa-fw fa-bar-chart"></i> Estatisticas</a>
-  <a href="empresasADM.xhtml"><i class="fa fa-fw fa-wrench"></i> Empresas</a>
-  <a href="criarUsuarioAdm.xhtml"><i class="fa fa-fw fa-user-plus"></i> Criar ADM</a>
-  <a href="perfilADM.xhtml"><i class="fa fa-fw fa-user"></i> Perfil</a>
-  <a href="#clients"><i class="fa fa-fw fa-sign-out"></i> Sair</a>
+	
+	<a href="homeADM.xhtml"><i class="fa fa-fw fa-bar-chart"></i> Estatisticas</a>
+	<a href="empresasADM.xhtml"><i class="fa fa-fw fa-wrench"></i> Empresas</a>
+	<a href="criarUsuarioAdm.xhtml"><i class="fa fa-fw fa-user-plus"></i> Criar ADM</a>
+	<a href="perfilADM.xhtml"><i class="fa fa-fw fa-user"></i> Perfil</a>
+  
+	<form>
+	<p:commandLink action="#{sairMBean.matarSession}"><i class="fa fa-fw fa-sign-out"></i> Sair</p:commandLink>
+	</form>
 
 </div>
 
