--- a/src/main/webapp/alterarPerfilADM.xhtml
+++ b/src/main/webapp/alterarPerfilADM.xhtml
@@ -10,33 +10,25 @@
 
 	<ui:define name="content">
 
-		<h:form>
-			<p:panel style="margin-top:7%; align:center; margin-left:20%; margin-right:0%; width:50%">
+<h:body>
 
-				<h:panelGrid columns="2" style="width:100%">
+<center>
+	<p:panel value="Login" style="width: 600px">
+		
+		<h:graphicImage library="img" name="/logo-senai.png" style="width:300px; margin: 7px;"/>
 
-					<h:panelGrid columns="1" style="width:50%">
+		<p />
+		<p:panel>
+			<h:form>
+
+				<center>
+					<h:panelGrid>
 
 						<p:outputLabel id="nif" value="NIF: " />
 						<p:inputText disabled="true" value="#{usuarioMBean.emp.CNPJ}" />
 						<br />
-						<p:outputLabel id="nomeEmpresa" value="Nome: " />
+						<p:outputLabel id="nomeADM" value="Nome: " />
 						<p:inputText value="#{usuarioMBean.emp.nome}" />
-						<br />
-						<p:outputLabel id="cidade" value="Cidade: #{usuarioMBean.emp.cidade}" />
-						<p:inputText value="#{usuarioMBean.emp.cidade}" />
-						<br />
-						<p:outputLabel id="bairro" value="Bairro: #{usuarioMBean.emp.bairro}" />
-						<p:inputText value="#{usuarioMBean.emp.bairro}" />
-
-					</h:panelGrid>
-
-
-
-					<h:panelGrid columns="1" style="width:50%">
-
-						<p:outputLabel id="rua" value="Rua: #{usuarioMBean.emp.rua}" />
-						<p:inputText value="#{usuarioMBean.emp.rua}" />
 						<br />
 						<p:outputLabel id="email" value="Email: #{usuarioMBean.emp.email}" />
 						<p:inputText value="#{usuarioMBean.emp.email}" />
@@ -44,27 +36,24 @@
 						<p:outputLabel id="Telefone" value="Telefone: #{usuarioMBean.emp.telefone}" />
 						<p:inputText value="#{usuarioMBean.emp.telefone}" />
 						<br />
-						<p:outputLabel id="cargo" value="Cargo: #{usuarioMBean.emp.representante}" />
-						<p:inputText value="#{usuarioMBean.emp.representante}" />
-
 
 					</h:panelGrid>
-
-				</h:panelGrid>
-
-
-				<br />
-
-
-				<center>
-					<h:commandButton value="Alterar"
-						action="#{alterarPerfilMBean.alterar}"
-						style="height: 30px; font-size: 14px; width:120px; border: 0px" ajax="false" />
+					<p />
 				</center>
+		
+				<center>
+					<h:commandButton value="Salvar" action="#{alterarPerfilMBean.alterar}" style="height: 30px; font-size: 14px; width:120px; border: 0px" ajax="false" />
+				</center>
+				
+			</h:form>
 
+			<p />
 
-			</p:panel>
-		</h:form>
+		</p:panel>
+	</p:panel>
+	</center>
+
+</h:body>
 
 
 	</ui:define>
