--- a/src/main/webapp/homeADM.xhtml
+++ b/src/main/webapp/homeADM.xhtml
@@ -3,12 +3,15 @@
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
-	
+
 <ui:composition template="/WEB-INF/templateADM/templateADM.xhtml">
 
-<ui:define name="css"><link rel="stylesheet" type="text/css" href="resources/css/homeADM.css" /></ui:define>
+	<ui:define name="css">
+		<link rel="stylesheet" type="text/css"
+			href="resources/css/homeADM.css" />
+	</ui:define>
 
-<ui:define name="title">Home ADM</ui:define>
+	<ui:define name="title">Home ADM</ui:define>
 
 
 	<ui:define name="content">
