--- a/src/main/webapp/WEB-INF/templateADM/templateADM.xhtml
+++ b/src/main/webapp/WEB-INF/templateADM/templateADM.xhtml
@@ -37,6 +37,7 @@
 	<a href="empresasADM.xhtml"><i class="fa fa-fw fa-wrench"></i> Empresas</a>
 	<a href="criarUsuarioAdm.xhtml"><i class="fa fa-fw fa-user-plus"></i> Criar ADM</a>
 	<a href="perfilADM.xhtml"><i class="fa fa-fw fa-user"></i> Perfil</a>
+	<a href="temfiltroAdm.xhtml"><i class="fa fa-fw fa-filter"></i> Filtro</a>
   
 	<h:form>
 		<p:commandLink action="#{sairMBean.matarSession}"><i class="fa fa-fw fa-sign-out"></i> Sair</p:commandLink>
