--- a/src/main/webapp/criarUsuarioAdm.xhtml
+++ b/src/main/webapp/criarUsuarioAdm.xhtml
@@ -13,6 +13,9 @@
 	<ui:define name="content">
 	
 	<h:body>
+	<p:growl>
+		<p:autoUpdate />
+	</p:growl>
 
 <center>
 	<p:panel value="Login" style="width: 600px">
