--- a/src/main/webapp/perfilADM.xhtml
+++ b/src/main/webapp/perfilADM.xhtml
@@ -25,7 +25,8 @@
 				<center>
 					<h:panelGrid>
 
-						<p:outputLabel id="nif" value="NIF: " />
+
+						<h:outputText id="nif" value="NIF: " style="font-weight:bold;"/>
 						<p:inputText disabled="true" value="#{usuarioMBean.emp.CNPJ}" />
 						<br />
 						<p:outputLabel id="nomeADM" value="Nome: " />
