--- a/src/main/webapp/esqueciSenha.xhtml
+++ b/src/main/webapp/esqueciSenha.xhtml
@@ -25,6 +25,7 @@
 
 							<h:outputText id="recuperaemail" value=" Insira seu E-mail: " />
 							<p:inputText label="Email" id="usuarioa"
+							requiredMessage="Email incorreto!"
 								value="#{recuperarSenhaMBean.mens.destinatario}"
 								style="width:240px" required="true" />
 
