--- a/src/main/webapp/alterarPerfilEmpresa.xhtml
+++ b/src/main/webapp/alterarPerfilEmpresa.xhtml
@@ -10,66 +10,82 @@
 
 	<ui:define name="content">
 
-		<h:form>
-			<p:panel
-				style="margin-top:8%; align:center; margin-left:20%; margin-right:20%; width:45%">
+		<h:body>
 
-				<h:panelGrid columns="2" style="width:100%">
+			<center>
+				<p:panel value="Login" style="width: 600px">
 
-					<h:panelGrid columns="1" style="width:50%">
+					<h:graphicImage library="img" name="/logo-senai.png"
+						style="width:300px; margin: 7px;" />
 
-						<p:outputLabel id="cnpj" value="CNPJ: " />
-						<p:inputText disabled="true" value="#{usuarioMBean.emp.CNPJ}" />
-						<br />
-						<p:outputLabel id="nomeEmpresa" value="Nome: " />
-						<p:inputText value="#{usuarioMBean.emp.nome}" />
-						<br />
-						<p:outputLabel id="cidade"
-							value="Cidade: #{usuarioMBean.emp.cidade}" />
-						<p:inputText value="#{usuarioMBean.emp.cidade}" />
-						<br />
-						<p:outputLabel id="bairro"
-							value="Bairro: #{usuarioMBean.emp.bairro}" />
-						<p:inputText value="#{usuarioMBean.emp.bairro}" />
+					<p />
+					<p:panel>
+						<h:form>
 
-					</h:panelGrid>
+							<center>
+								<h:panelGrid>
 
 
+									<h:outputText id="cnpj" value="CNPJ: "
+										style="font-weight:bold;" />
+									<p:inputText disabled="true" value="#{usuarioMBean.emp.CNPJ}"
+										style="font-weight: bold;" />
+									<br />
+									<p:outputLabel id="nomeEmp" value="Nome: " />
+									<p:inputText value="#{usuarioMBean.emp.nome}"
+										style="font-weight: bold;" />
+									<br />
+									<p:outputLabel id="representante" value="Representante (a): " />
+									<p:inputText value="#{usuarioMBean.emp.representante}"
+										style="font-weight: bold;" />
+									<br />
+									<p:outputLabel id="cidade" value="Cidade: " />
+									<p:inputText value="#{usuarioMBean.emp.cidade}"
+										style="font-weight: bold;" />
+									<br />
+									<p:outputLabel id="bairro" value="Bairro: " />
+									<p:inputText value="#{usuarioMBean.emp.bairro}"
+										style="font-weight: bold;" />
+									<br />
+									<p:outputLabel id="rua" value="Rua: " />
+									<p:inputText value="#{usuarioMBean.emp.rua}"
+										style="font-weight: bold;" />
+									<br />
+									<p:outputLabel id="email" value="Email: " />
+									<p:inputText value="#{usuarioMBean.emp.email}"
+										style="font-weight: bold;" />
+									<br />
+									<p:outputLabel id="telefone" value="Telefone: " />
+									<p:inputText value="#{usuarioMBean.emp.telefone}"
+										style="font-weight: bold;" />
+									<br />
 
-					<h:panelGrid columns="1" style="width:50%">
 
-						<p:outputLabel id="rua" value="Rua: #{usuarioMBean.emp.rua}" />
-						<p:inputText value="#{usuarioMBean.emp.rua}" />
-						<br />
-						<p:outputLabel id="email" value="Email: #{usuarioMBean.emp.email}" />
-						<p:inputText value="#{usuarioMBean.emp.email}" />
-						<br />
-						<p:outputLabel id="Telefone"
-							value="Telefone: #{usuarioMBean.emp.telefone}" />
-						<p:inputText value="#{usuarioMBean.emp.telefone}" />
-						<br />
-						<p:outputLabel id="representante"
-							value="Representante: #{usuarioMBean.emp.representante}" />
-						<p:inputText value="#{usuarioMBean.emp.representante}" />
+								</h:panelGrid>
+								<p />
+							</center>
 
+							<center>
+								<h:commandButton value="Alterar"
+									action="#{alterarPerfilMBean.alterar}"
+									style="height: 30px; font-size: 14px; width:220px" ajax="false" />
+							</center>
+						</h:form>
 
-					</h:panelGrid>
+						<p />
+						
+						<h:form>
+					<center>
+						<h:commandButton value="Voltar" ajax="false" action="perfilEmpresa"
+							style="height: 30px; font-size: 14px; width:150px; border: 0px; " />
+					</center>
+				</h:form>
 
-				</h:panelGrid>
+					</p:panel>
+				</p:panel>
+			</center>
 
-
-				<br />
-
-
-				<center>
-					<h:commandButton value="Alterar"
-						action="#{alterarPerfilMBean.alterar}"
-						style="height: 30px; font-size: 14px; width:220px" ajax="false" />
-				</center>
-
-
-			</p:panel>
-		</h:form>
+		</h:body>
 
 
 	</ui:define>
