--- a/src/main/webapp/temfiltroAdm.xhtml
+++ b/src/main/webapp/temfiltroAdm.xhtml
@@ -12,7 +12,7 @@
 
 	<ui:define name="content">
 <center>
-	<p:panel value="Login" style="width: 600px">
+	<p:panel value="Login" style="margin-top: -3% !important; width: 600px">
 		
 		<h:graphicImage library="img" name="/logo-senai.png" style="width:300px; margin: 7px;"/>
 
