--- a/src/main/webapp/perfilADM.xhtml
+++ b/src/main/webapp/perfilADM.xhtml
@@ -27,16 +27,16 @@
 
 
 						<h:outputText id="nif" value="NIF: " style="font-weight:bold;"/>
-						<p:inputText disabled="true" value="#{usuarioMBean.adm.NIF}" style="font-weight: bold;"/>
+						<p:inputText disabled="true" value="#{usuarioMBean.adm.NIF}" />
 						<br />
 						<p:outputLabel id="nomeADM" value="Nome: " />
-						<p:inputText disabled="true" value="#{usuarioMBean.adm.nome}" style="font-weight: bold;"/>
+						<p:inputText disabled="true" value="#{usuarioMBean.adm.nome}" />
 						<br />
 						<p:outputLabel id="email" value="Email: " />
-						<p:inputText disabled="true" value="#{usuarioMBean.adm.email}" style="font-weight: bold;"/>
+						<p:inputText disabled="true" value="#{usuarioMBean.adm.email}" />
 						<br />
 						<p:outputLabel id="Telefone" value="Telefone: " />
-						<p:inputText disabled="true" value="#{usuarioMBean.adm.telefone}" style="font-weight: bold;"/>
+						<p:inputText disabled="true" value="#{usuarioMBean.adm.telefone}" />
 						<br />
 					</h:panelGrid>
 					<p />
