--- a/src/main/webapp/temfiltro.xhtml
+++ b/src/main/webapp/temfiltro.xhtml
@@ -54,7 +54,7 @@
 							<h:outputLabel for="estado" value="Estado:" />
 							<p:selectOneMenu required="true" filterMatchMode="startsWith"
 								style="width: 160px" panelStyle="width:150px" id="estado"
-								value="#{filtroService.eFiltro.estado}">
+								value="#{a}">
 								<f:selectItem itemLabel="" itemValue="" />
 								<f:selectItems value="#{checkboxView.cities}" />
 							</p:selectOneMenu>
@@ -63,11 +63,11 @@
 
 							<h:outputLabel for="cidades" value="Cidades:" />
 							<p:selectCheckboxMenu id="cidades"
-								value="#{filtroService.eFiltro.cidade}" label="Cidades"
+								value="#{a}" label="Cidades"
 								style="width: 160px"
 								filter="true" filterMatchMode="startsWith"
 								panelStyle="width:290px">
-								<f:selectItems value="#{filtroService.eFiltro.cidade}" />
+								<f:selectItems value="#{a}" />
 							</p:selectCheckboxMenu>
 
 						
@@ -77,16 +77,16 @@
 
 							<h:outputLabel for="area" value="Área:" />
 							<p:selectOneMenu required="true" style="width: 160px"
-								panelStyle="width:150px" id="area" value="#{filtroService.eFiltro.area}">
+								panelStyle="width:150px" id="area" value="#{a}">
 								<f:selectItem itemLabel="" itemValue="" />
-								<f:selectItems value="#{filtroService.eFiltro.area}" />
+								<f:selectItems value="#{a}" />
 							</p:selectOneMenu>
 							<P />
 							<h:outputLabel for="curso" value="Curso:" />
 							<p:selectOneMenu required="true" style="width: 160px"
-								panelStyle="width:150px" id="curso" value="#{filtroService.eFiltro.curso}">
+								panelStyle="width:150px" id="curso" value="#{a}">
 								<f:selectItem itemLabel="" itemValue="" />
-								<f:selectItems value="#{filtroService.eFiltro.curso}" />
+								<f:selectItems value="#{a}" />
 							</p:selectOneMenu>
 							<P />
 
@@ -94,21 +94,21 @@
 							<p:selectCheckboxMenu style="width: 160px" id="sem"
 								value="#{filtroService.eFiltro.semestre}" multiple="true"
 								filter="true" panelStyle="width:290px">
-								<f:selectItems value="#{filtroService.eFiltro.semestre}" />
+								<f:selectItems value="#{a}" />
 							</p:selectCheckboxMenu>
 							<p />
 
 							<h:outputLabel for="idioma" value="Idioma:" />
 							<p:selectCheckboxMenu style="width: 160px" id="idioma"
-								value="#{filtroService.eFiltro.idioma}" multiple="true"
+								value="#{a}" multiple="true"
 								filter="true" panelStyle="width:290px">
-								<f:selectItems value="#{filtroService.eFiltro.idioma}" />
+								<f:selectItems value="#{a}" />
 							</p:selectCheckboxMenu>
 							<p />
 
 
 							<h:outputText value="Experiência: " />
-							<p:selectOneRadio required="true" id="experiencia" value="#{filtroService.eFiltro.experiencia}">
+							<p:selectOneRadio required="true" id="experiencia" value="#{a}">
 								<f:selectItem itemLabel="Sim" itemValue="Sim" />
 								<f:selectItem itemLabel="Não" itemValue="Nao" />
 							</p:selectOneRadio>
